--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,3 +10,9 @@ BBFILE_PATTERN_updatehub-raspberrypi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_updatehub-raspberrypi = "6"
 
 LAYERDEPENDS_updatehub-rasberrypi = "updatehub"
+
+# UpdateHub settings
+UPDATEHUB_INSTALL_MODE_rpi ??= "copy tarball"
+UPDATEHUB_FILESYSTEM_SUPPORT_rpi ??= "vfat ext4"
+UPDATEHUB_IMAGE_TYPE_rpi ??= "active/inactive"
+UPDATEHUB_ACTIVE_INACTIVE_BACKEND_rpi ??= "u-boot"
