--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,3 +16,20 @@ UPDATEHUB_INSTALL_MODE_rpi ??= "copy tarball"
 UPDATEHUB_FILESYSTEM_SUPPORT_rpi ??= "vfat ext4"
 UPDATEHUB_IMAGE_TYPE_rpi ??= "active/inactive"
 UPDATEHUB_ACTIVE_INACTIVE_BACKEND_rpi ??= "u-boot"
+
+# Setting to use wic image
+IMAGE_FSTYPES_rpi = "tar.xz wic.gz"
+IMAGE_DEPENDS_wic_rpi ?= " dosfstools-native mtools-native parted-native ${IMAGE_BOOTLOADER} virtual/bootloader"
+WKS_SEARCH_PATH_rpi ?= "${THISDIR}:${@':'.join('%s/wic' % p for p in '${BBPATH}'.split(':'))}:${@':'.join('%s/scripts/lib/wic/canned-wks' % l for l in '${BBPATH}:${COREBASE}'.split(':'))}"
+WKS_FILES_rpi ?= "updatehub.rpi.wks"
+
+IMAGE_BOOT_FILES_rpi ?= " \
+    u-boot.bin \
+    bcm2835-bootfiles/* \
+"
+
+KERNEL_IMAGETYPE_rpi ?= "zImage"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_rpi += " \
+    kernel-image \
+    kernel-devicetree \
+"
