conf/layer.conf: Use u-boot-updatehub for all rpi machines
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -33,3 +33,8 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_rpi += " \
     kernel-image \
     kernel-devicetree \
 "
+
+PREFERRED_PROVIDER_virtual/bootloader_rpi ?= "u-boot-updatehub"
+PREFERRED_PROVIDER_u-boot_rpi ?= "u-boot-updatehub"
+PREFERRED_PROVIDER_u-boot-fw-utils_rpi ?= "u-boot-updatehub-fw-utils"
+UBOOT_MACHINE_raspberrypi3 ?= "rpi_3_32b_defconfig"
