--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -39,4 +39,4 @@ PREFERRED_PROVIDER_u-boot_rpi ?= "u-boot-updatehub"
 PREFERRED_PROVIDER_u-boot-fw-utils_rpi ?= "u-boot-updatehub-fw-utils"
 UBOOT_MACHINE_raspberrypi3 ?= "rpi_3_32b_defconfig"
 
-PREFERRED_VERSION_linux-raspberrypi_rpi ?= "4.4"
+PREFERRED_VERSION_linux-raspberrypi_rpi ?= "4.4.%"
