--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,6 +16,7 @@ UPDATEHUB_INSTALL_MODE_rpi ??= "copy tarball"
 UPDATEHUB_FILESYSTEM_SUPPORT_rpi ??= "vfat ext4"
 UPDATEHUB_IMAGE_TYPE_rpi ??= "active/inactive"
 UPDATEHUB_ACTIVE_INACTIVE_BACKEND_rpi ??= "u-boot"
+UPDATEHUB_DEVICE_IDENTITY_rpi ??= "cpuinfo-serial"
 
 # Setting to use wic image
 IMAGE_FSTYPES_rpi = "tar.xz wic.gz"
