conf/layer.conf: Rename u-boot.bin to kernel.img
To boot using U-Boot we can rename U-Boot binary to kernel.img,
then Raspberry Pi will load U-Boot automatically and we don't need
to change rpi-config recipe. The rpi-config_git append can be removed.

Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,7 +25,7 @@ WKS_SEARCH_PATH_rpi ?= "${THISDIR}:${@':'.join('%s/wic' % p for p in '${BBPATH}'
 WKS_FILES_rpi ?= "updatehub.rpi.wks"
 
 IMAGE_BOOT_FILES_rpi ?= " \
-    u-boot.bin \
+    u-boot.bin;kernel.img \
     bcm2835-bootfiles/* \
 "
 
