conf/layer.conf: Install only necessary files to boot rpi 3
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,7 +26,9 @@ WKS_FILES_rpi ?= "updatehub.rpi.wks"
 
 IMAGE_BOOT_FILES_rpi ?= " \
     u-boot.bin;kernel.img \
-    bcm2835-bootfiles/* \
+    bcm2835-bootfiles/bootcode.bin;bootcode.bin \
+    bcm2835-bootfiles/config.txt;config.txt \
+    bcm2835-bootfiles/start.elf;start.elf \
 "
 
 KERNEL_IMAGETYPE_rpi ?= "zImage"
