Create updatehub-rpi machine override to add common settings
Use machine override to avoid code duplication and make easier to
add support for other Raspberry Pi machines.

Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,35 +11,43 @@ BBFILE_PRIORITY_updatehub-raspberrypi = "6"
 
 LAYERDEPENDS_updatehub-rasberrypi = "updatehub"
 
-# UpdateHub settings
-UPDATEHUB_INSTALL_MODE_rpi ??= "copy tarball"
-UPDATEHUB_FILESYSTEM_SUPPORT_rpi ??= "vfat ext4"
-UPDATEHUB_IMAGE_TYPE_rpi ??= "active/inactive"
-UPDATEHUB_ACTIVE_INACTIVE_BACKEND_rpi ??= "u-boot"
-UPDATEHUB_DEVICE_IDENTITY_rpi ??= "cpuinfo-serial"
-
+###
+# Global setting to use UpadateHub with meta-rasberrypi layer
+#
 # Setting to use wic image
-IMAGE_FSTYPES_rpi = "tar.xz wic.gz"
-IMAGE_DEPENDS_wic_rpi ?= " dosfstools-native mtools-native parted-native ${IMAGE_BOOTLOADER} virtual/bootloader"
-WKS_SEARCH_PATH_rpi ?= "${THISDIR}:${@':'.join('%s/wic' % p for p in '${BBPATH}'.split(':'))}:${@':'.join('%s/scripts/lib/wic/canned-wks' % l for l in '${BBPATH}:${COREBASE}'.split(':'))}"
-WKS_FILES_rpi ?= "updatehub.rpi.wks"
+IMAGE_DEPENDS_wic_updatehub-rpi ??= "dosfstools-native mtools-native parted-native ${IMAGE_BOOTLOADER} virtual/bootloader"
+IMAGE_FSTYPES_updatehub-rpi ??= "tar.xz wic.gz"
+WKS_FILES_updatehub-rpi ??= "updatehub.rpi.wks"
+WKS_SEARCH_PATH_updatehub-rpi ??= "${THISDIR}:${@':'.join('%s/wic' % p for p in '${BBPATH}'.split(':'))}:${@':'.join('%s/scripts/lib/wic/canned-wks' % l for l in '${BBPATH}:${COREBASE}'.split(':'))}"
 
-IMAGE_BOOT_FILES_rpi ?= " \
+# UpdateHub settings
+UPDATEHUB_ACTIVE_INACTIVE_BACKEND_updatehub-rpi ??= "u-boot"
+UPDATEHUB_DEVICE_IDENTITY_updatehub-rpi ??= "cpuinfo-serial"
+UPDATEHUB_FILESYSTEM_SUPPORT_updatehub-rpi ??= "vfat ext4"
+UPDATEHUB_IMAGE_TYPE_updatehub-rpi ??= "active/inactive"
+UPDATEHUB_INSTALL_MODE_updatehub-rpi ??= "copy tarball"
+
+PREFERRED_PROVIDER_u-boot-fw-utils_updatehub-rpi ??= "u-boot-updatehub-fw-utils"
+PREFERRED_PROVIDER_u-boot_updatehub-rpi ??= "u-boot-updatehub"
+PREFERRED_PROVIDER_virtual/bootloader_updatehub-rpi ??= "u-boot-updatehub"
+PREFERRED_VERSION_linux-raspberrypi_updatehub-rpi ??= "4.4.%"
+KERNEL_IMAGETYPE_updatehub-rpi ??= "zImage"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_updatehub-rpi += " \
+    kernel-image \
+    kernel-devicetree \
+"
+
+
+###
+# Configuration for Raspberry Pi Devices
+#
+# UpdateHub settings for raspberrypi3 machine
+MACHINEOVERRIDES_prepend_raspberrypi3 = "updatehub-rpi:"
+UBOOT_MACHINE_updatehub-rpi_raspberrypi3 ??= "rpi_3_32b_defconfig"
+
+IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
     u-boot.bin;kernel.img \
     bcm2835-bootfiles/bootcode.bin;bootcode.bin \
     bcm2835-bootfiles/config.txt;config.txt \
     bcm2835-bootfiles/start.elf;start.elf \
 "
-
-KERNEL_IMAGETYPE_rpi ?= "zImage"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_rpi += " \
-    kernel-image \
-    kernel-devicetree \
-"
-
-PREFERRED_PROVIDER_virtual/bootloader_rpi ?= "u-boot-updatehub"
-PREFERRED_PROVIDER_u-boot_rpi ?= "u-boot-updatehub"
-PREFERRED_PROVIDER_u-boot-fw-utils_rpi ?= "u-boot-updatehub-fw-utils"
-UBOOT_MACHINE_raspberrypi3 ?= "rpi_3_32b_defconfig"
-
-PREFERRED_VERSION_linux-raspberrypi_rpi ?= "4.4.%"
