Install bcm2835 boot files
Signed-off-by: Luis Gustavo S. Barreto <gustavo@ossystems.com.br>
(cherry picked from commit 1267d28ae5bc9f9ea572e274479f6f7df269c59c)

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -50,4 +50,11 @@ IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
     bcm2835-bootfiles/bootcode.bin;bootcode.bin \
     bcm2835-bootfiles/config.txt;config.txt \
     bcm2835-bootfiles/start.elf;start.elf \
+    bcm2835-bootfiles/start_cd.elf;start_cd.elf \
+    bcm2835-bootfiles/start_db.elf;start_db.elf \
+    bcm2835-bootfiles/start_x.elf;start_x.elf \
+    bcm2835-bootfiles/fixup.dat;fixup.dat \
+    bcm2835-bootfiles/fixup_cd.dat;fixup_cd.dat \
+    bcm2835-bootfiles/fixup_db.dat;fixup_db.dat \
+    bcm2835-bootfiles/fixup_x.dat;fixup_x.dat \
 "
