uhupkg: duplicates the install set
Signed-off-by: Luis Gustavo S. Barreto <gustavo@ossystems.com.br>
(cherry picked from commit 5cc796d3bf50933e453556114073eb2c32dc852e)

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -95,6 +95,76 @@
                 "target-type": "device"
             },
             {
+                "filename": "bcm2835-bootfiles/start_cd.elf",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/start_cd.elf",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2835-bootfiles/start_db.elf",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/start_db.elf",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2835-bootfiles/start_x.elf",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/start_x.elf",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2835-bootfiles/fixup.dat",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/fixup.dat",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2835-bootfiles/fixup_cd.dat",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/fixup_cd.dat",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2835-bootfiles/fixup_db.dat",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/fixup_db.dat",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2835-bootfiles/fixup_x.dat",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/mmcblk0p1",
+                "target-path": "/fixup_x.dat",
+                "target-type": "device"
+            },
+            {
                 "filename": "$IMAGE_BASENAME-$MACHINE.tar.xz",
                 "filesystem": "ext4",
                 "format?": true,
