conf/layer.conf: Add option to not change fstab
Add --no-fstab-update to WIC_CREATE_EXTRA_ARGS avoid wic change fstab
in final image, so the fstab file found in recipes-core/base-files
will be the same that in final /etc/fstab.

Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -36,6 +36,8 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_updatehub-rpi += " \
     kernel-devicetree \
 "
 
+# Do not change fstab file
+WIC_CREATE_EXTRA_ARGS_updatehub-rpi ??= "--no-fstab-update"
 
 ###
 # Configuration for Raspberry Pi Devices
