uhu/raspberrypi3.uhupkg: Use label for target option
Change target: to use label when this is possible. This change make
uhupkg more generic, once we don't have target option hardcoded with
mmcblk device.

Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -7,7 +7,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/bootcode.bin",
                 "target-type": "device"
             },
@@ -18,7 +18,7 @@
                 "install-condition": "version-diverges",
                 "install-condition-pattern-type": "u-boot",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/kernel.img",
                 "target-type": "device"
             },
@@ -28,7 +28,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/config.txt",
                 "target-type": "device"
             },
@@ -38,7 +38,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start.elf",
                 "target-type": "device"
             },
@@ -48,7 +48,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start_cd.elf",
                 "target-type": "device"
             },
@@ -58,7 +58,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start_db.elf",
                 "target-type": "device"
             },
@@ -68,7 +68,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start_x.elf",
                 "target-type": "device"
             },
@@ -78,7 +78,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup.dat",
                 "target-type": "device"
             },
@@ -88,7 +88,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup_cd.dat",
                 "target-type": "device"
             },
@@ -98,7 +98,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup_db.dat",
                 "target-type": "device"
             },
@@ -108,7 +108,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup_x.dat",
                 "target-type": "device"
             },
@@ -117,7 +117,7 @@
                 "filesystem": "ext4",
                 "format?": true,
                 "mode": "tarball",
-                "target": "/dev/mmcblk0p2",
+                "target": "/dev/disk/by-label/system_a",
                 "target-path": "/",
                 "target-type": "device"
             }
@@ -129,7 +129,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/bootcode.bin",
                 "target-type": "device"
             },
@@ -140,7 +140,7 @@
                 "install-condition": "version-diverges",
                 "install-condition-pattern-type": "u-boot",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/kernel.img",
                 "target-type": "device"
             },
@@ -150,7 +150,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/config.txt",
                 "target-type": "device"
             },
@@ -160,7 +160,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start.elf",
                 "target-type": "device"
             },
@@ -170,7 +170,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start_cd.elf",
                 "target-type": "device"
             },
@@ -180,7 +180,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start_db.elf",
                 "target-type": "device"
             },
@@ -190,7 +190,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/start_x.elf",
                 "target-type": "device"
             },
@@ -200,7 +200,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup.dat",
                 "target-type": "device"
             },
@@ -210,7 +210,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup_cd.dat",
                 "target-type": "device"
             },
@@ -220,7 +220,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup_db.dat",
                 "target-type": "device"
             },
@@ -230,7 +230,7 @@
                 "format?": false,
                 "install-condition": "content-diverges",
                 "mode": "copy",
-                "target": "/dev/mmcblk0p1",
+                "target": "/dev/disk/by-label/boot",
                 "target-path": "/fixup_x.dat",
                 "target-type": "device"
             },
@@ -239,7 +239,7 @@
                 "filesystem": "ext4",
                 "format?": true,
                 "mode": "tarball",
-                "target": "/dev/mmcblk0p3",
+                "target": "/dev/disk/by-label/system_b",
                 "target-path": "/",
                 "target-type": "device"
             }
