--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,7 +15,7 @@ LAYERDEPENDS_updatehub-rasberrypi = "updatehub"
 # Global setting to use UpadateHub with meta-rasberrypi layer
 #
 # Setting to use wic image
-WKS_FILE_DEPENDS_updatehub-rpi += "${IMAGE_BOOTLOADER} virtual/bootloader"
+WKS_FILE_DEPENDS_updatehub-rpi += "dosfstools-native ${IMAGE_BOOTLOADER} virtual/bootloader"
 IMAGE_FSTYPES_updatehub-rpi ??= "tar.xz wic.gz"
 WKS_FILES_updatehub-rpi ??= "updatehub.rpi.wks"
 WKS_SEARCH_PATH_updatehub-rpi ??= "${THISDIR}:${@':'.join('%s/wic' % p for p in '${BBPATH}'.split(':'))}:${@':'.join('%s/scripts/lib/wic/canned-wks' % l for l in '${BBPATH}:${COREBASE}'.split(':'))}"
