conf/layer.conf: Add LAYERSERIES_COMPAT info
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,6 +9,7 @@ BBFILE_COLLECTIONS += "updatehub-raspberrypi"
 BBFILE_PATTERN_updatehub-raspberrypi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_updatehub-raspberrypi = "6"
 
+LAYERSERIES_COMPAT_updatehub-raspberrypi = "sumo"
 LAYERDEPENDS_updatehub-rasberrypi = "updatehub"
 
 ###
