uhu: use checksum to decide if u-boot needs update
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>
(cherry picked from commit 9f9f4c7f134eff3372519bc80fa0bfa2e04be6c3)

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -15,8 +15,7 @@
                 "filename": "u-boot.bin",
                 "filesystem": "vfat",
                 "format?": false,
-                "install-condition": "version-diverges",
-                "install-condition-pattern-type": "u-boot",
+                "install-condition": "content-diverges",
                 "mode": "copy",
                 "target": "/dev/disk/by-label/boot",
                 "target-path": "/kernel.img",
@@ -138,8 +137,7 @@
                 "filename": "u-boot.bin",
                 "filesystem": "vfat",
                 "format?": false,
-                "install-condition": "version-diverges",
-                "install-condition-pattern-type": "u-boot",
+                "install-condition": "content-diverges",
                 "mode": "copy",
                 "target": "/dev/disk/by-label/boot",
                 "target-path": "/kernel.img",
