uhu/raspberrypi3.uhupkg: Use lzma for rootfs compression
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>
(cherry picked from commit c0f98b690dba9c50153aa3c871021e707fa1c065)

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -112,7 +112,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "$IMAGE_BASENAME-$MACHINE.tar.xz",
+                "filename": "$IMAGE_BASENAME-$MACHINE.tar.lzma",
                 "filesystem": "ext4",
                 "format-options": "-L system_a",
                 "format?": true,
@@ -234,7 +234,7 @@
                 "target-type": "device"
             },
             {
-                "filename": "$IMAGE_BASENAME-$MACHINE.tar.xz",
+                "filename": "$IMAGE_BASENAME-$MACHINE.tar.lzma",
                 "filesystem": "ext4",
                 "format-options": "-L system_b",
                 "format?": true,
