conf/layer.conf: Add zeus to LAYERSERIES_COMPAT
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "updatehub-raspberrypi"
 BBFILE_PATTERN_updatehub-raspberrypi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_updatehub-raspberrypi = "6"
 
-LAYERSERIES_COMPAT_updatehub-raspberrypi = "warrior"
+LAYERSERIES_COMPAT_updatehub-raspberrypi = "zeus"
 LAYERDEPENDS_updatehub-raspberrypi = "updatehub"
 
 ###
