conf/layer.conf: Add raspberrypi to LAYERDEPENDS
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>
(cherry picked from commit 3c9609e62388c2d4f92fc7d496233420296cdb01)

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,7 +10,7 @@ BBFILE_PATTERN_updatehub-raspberrypi = "^${LAYERDIR}/"
 BBFILE_PRIORITY_updatehub-raspberrypi = "6"
 
 LAYERSERIES_COMPAT_updatehub-raspberrypi = "zeus"
-LAYERDEPENDS_updatehub-raspberrypi = "updatehub"
+LAYERDEPENDS_updatehub-raspberrypi = "updatehub raspberrypi"
 
 ###
 # Global setting to use UpadateHub with meta-rasberrypi layer
