--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -31,7 +31,7 @@ UPDATEHUB_INSTALL_MODE_updatehub-rpi ??= "copy tarball"
 PREFERRED_PROVIDER_u-boot-fw-utils_updatehub-rpi ??= "u-boot-updatehub-fw-utils"
 PREFERRED_PROVIDER_u-boot_updatehub-rpi ??= "u-boot-updatehub"
 PREFERRED_PROVIDER_virtual/bootloader_updatehub-rpi ??= "u-boot-updatehub"
-KERNEL_IMAGETYPE_updatehub-rpi ??= "zImage"
+RPI_USE_U_BOOT_updatehub-rpi = "1"
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_updatehub-rpi += " \
     kernel-image \
     kernel-devicetree \
