--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -47,7 +47,6 @@ WIC_CREATE_EXTRA_ARGS_updatehub-rpi ??= "--no-fstab-update"
 MACHINEOVERRIDES_prepend_raspberrypi3 = "updatehub-rpi:"
 
 IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
-    u-boot.bin;kernel.img \
     bcm2835-bootfiles/bootcode.bin;bootcode.bin \
     bcm2835-bootfiles/config.txt;config.txt \
     bcm2835-bootfiles/start.elf;start.elf \
@@ -58,4 +57,5 @@ IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
     bcm2835-bootfiles/fixup_cd.dat;fixup_cd.dat \
     bcm2835-bootfiles/fixup_db.dat;fixup_db.dat \
     bcm2835-bootfiles/fixup_x.dat;fixup_x.dat \
+    u-boot.bin;${SDIMG_KERNELIMAGE} \
 "
