conf/layer.conf: Add support for raspberrypi3-64 machine
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>
(cherry picked from commit fa73b4fc40ce11e05b94c01a2fec278dd2a43d5a)

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -61,3 +61,12 @@ IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
     bcm2710-rpi-3-b-plus.dtb \
     u-boot.bin;${SDIMG_KERNELIMAGE} \
 "
+
+###
+# Configuration for Raspberry Pi Devices
+#
+# UpdateHub settings for raspberrypi3-64 machine
+MACHINEOVERRIDES_prepend_raspberrypi3-64 = "updatehub-rpi:"
+
+KERNEL_IMAGETYPE_UBOOT_updatehub-rpi_raspberrypi3-64 ??= "Image"
+UHUPKG_FILES_updatehub-rpi_raspberrypi3-64 ??= "raspberrypi3.uhupkg"
