conf/layer.conf: Add support for raspberrypi4 and raspberrypi4-64
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -70,3 +70,33 @@ MACHINEOVERRIDES_prepend_raspberrypi3-64 = "updatehub-rpi:"
 
 KERNEL_IMAGETYPE_UBOOT_updatehub-rpi_raspberrypi3-64 ??= "Image"
 UHUPKG_FILES_updatehub-rpi_raspberrypi3-64 ??= "raspberrypi3.uhupkg"
+
+###
+# Configuration for Raspberry Pi Devices
+#
+# UpdateHub settings for raspberrypi4 machine
+MACHINEOVERRIDES_prepend_raspberrypi4 = "updatehub-rpi:"
+
+IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi4 ??= " \
+    bcm2835-bootfiles/bootcode.bin;bootcode.bin \
+    bcm2835-bootfiles/config.txt;config.txt \
+    bcm2835-bootfiles/fixup4.dat;fixup4.dat \
+    bcm2835-bootfiles/fixup4cd.dat;fixup4cd.dat \
+    bcm2835-bootfiles/fixup4db.dat;fixup4db.dat \
+    bcm2835-bootfiles/fixup4x.dat;fixup4x.dat \
+    bcm2835-bootfiles/start4.elf;start4.elf \
+    bcm2835-bootfiles/start4cd.elf;start4cd.elf \
+    bcm2835-bootfiles/start4db.elf;start4db.elf \
+    bcm2835-bootfiles/start4x.elf;start4x.elf \
+    bcm2711-rpi-4-b.dtb \
+    u-boot.bin;${SDIMG_KERNELIMAGE} \
+"
+
+###
+# Configuration for Raspberry Pi Devices
+#
+# UpdateHub settings for raspberrypi4-64 machine
+MACHINEOVERRIDES_prepend_raspberrypi4-64 = "updatehub-rpi:"
+
+KERNEL_IMAGETYPE_UBOOT_updatehub-rpi_raspberrypi4-64 ??= "Image"
+UHUPKG_FILES_updatehub-rpi_raspberrypi4-64 ??= "raspberrypi4.wks"
