conf/layer.conf: Add rpi 3 dtb in boot partition
Install device tree files for both Raspberry Pi 3 and 3+ into boot
partition once U-Boot needs to get some information from dtb to boot
properly.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -57,5 +57,7 @@ IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
     bcm2835-bootfiles/fixup_cd.dat;fixup_cd.dat \
     bcm2835-bootfiles/fixup_db.dat;fixup_db.dat \
     bcm2835-bootfiles/fixup_x.dat;fixup_x.dat \
+    bcm2710-rpi-3-b.dtb \
+    bcm2710-rpi-3-b-plus.dtb \
     u-boot.bin;${SDIMG_KERNELIMAGE} \
 "
