--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -22,6 +22,26 @@
                 "target-type": "device"
             },
             {
+                "filename": "bcm2710-rpi-3-b.dtb",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/bcm2710-rpi-3-b.dtb",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2710-rpi-3-b-plus.dtb",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/bcm2710-rpi-3-b-plus.dtb",
+                "target-type": "device"
+            },
+            {
                 "filename": "bcm2835-bootfiles/config.txt",
                 "filesystem": "vfat",
                 "format?": false,
@@ -141,6 +161,26 @@
                 "mode": "copy",
                 "target": "/dev/disk/by-label/boot",
                 "target-path": "/kernel.img",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2710-rpi-3-b.dtb",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/bcm2710-rpi-3-b.dtb",
+                "target-type": "device"
+            },
+            {
+                "filename": "bcm2710-rpi-3-b-plus.dtb",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/bcm2710-rpi-3-b-plus.dtb",
                 "target-type": "device"
             },
             {
