raspberrypi3.uhupkg.config: Install u-boot.bin based on SDIMG_KERNELIMAGE
Signed-off-by: Domarys Correa <domarys.correa@ossystems.com.br>
Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>
(cherry picked from commit e85ef863b12af0f4ea45a164f50411dcc4f12397)

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -18,7 +18,7 @@
                 "install-condition": "content-diverges",
                 "mode": "copy",
                 "target": "/dev/disk/by-label/boot",
-                "target-path": "/kernel.img",
+                "target-path": "/$SDIMG_KERNELIMAGE",
                 "target-type": "device"
             },
             {
@@ -160,7 +160,7 @@
                 "install-condition": "content-diverges",
                 "mode": "copy",
                 "target": "/dev/disk/by-label/boot",
-                "target-path": "/kernel.img",
+                "target-path": "/$SDIMG_KERNELIMAGE",
                 "target-type": "device"
             },
             {
