Set layer to use UpdateHub Bootscript for Raspberry Pi machines
  - Use libubootenv for u-boot-fw-utils
  - Use mainline U-Boot as default
  - Use u-boot-updatehub-script for u-boot-default-script
  - Install u-boot-default-script and u-boot-default-env
  - Add boot.scr to boot partition
  - Configure UpdateHub Bootscript variables
  - Add boot.scr to uhupkg.config file

Signed-off-by: Fabio Berton <fabio.berton@ossystems.com.br>

--- a/uhu/raspberrypi3.uhupkg.config
+++ b/uhu/raspberrypi3.uhupkg.config
@@ -2,6 +2,16 @@
     "objects": [
         [
             {
+                "filename": "boot.scr-$MACHINE",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/boot.scr",
+                "target-type": "device"
+            },
+            {
                 "filename": "bcm2835-bootfiles/bootcode.bin",
                 "filesystem": "vfat",
                 "format?": false,
@@ -143,6 +153,16 @@
             }
         ],
         [
+            {
+                "filename": "boot.scr-$MACHINE",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/boot.scr",
+                "target-type": "device"
+            },
             {
                 "filename": "bcm2835-bootfiles/bootcode.bin",
                 "filesystem": "vfat",
