--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -28,9 +28,11 @@ UPDATEHUB_FILESYSTEM_SUPPORT_updatehub-rpi ??= "vfat ext4"
 UPDATEHUB_IMAGE_TYPE_updatehub-rpi ??= "active/inactive"
 UPDATEHUB_INSTALL_MODE_updatehub-rpi ??= "copy tarball"
 
-PREFERRED_PROVIDER_u-boot-fw-utils_updatehub-rpi ??= "u-boot-updatehub-fw-utils"
-PREFERRED_PROVIDER_u-boot_updatehub-rpi ??= "u-boot-updatehub"
-PREFERRED_PROVIDER_virtual/bootloader_updatehub-rpi ??= "u-boot-updatehub"
+PREFERRED_PROVIDER_u-boot-fw-utils_updatehub-rpi ??= "libubootenv"
+PREFERRED_PROVIDER_u-boot_updatehub-rpi ??= "u-boot"
+PREFERRED_PROVIDER_virtual/bootloader_updatehub-rpi ??= "u-boot"
+PREFERRED_PROVIDER_u-boot-default-script_updatehub-rpi ??= "u-boot-updatehub-script"
+UPDATEHUB_RUNTIME_PACKAGES_append_updatehub-rpi = " u-boot-default-script u-boot-default-env"
 RPI_USE_U_BOOT_updatehub-rpi = "1"
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_updatehub-rpi += " \
     kernel-image \
@@ -39,6 +41,20 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_updatehub-rpi += " \
 
 # Do not change fstab file
 WIC_CREATE_EXTRA_ARGS_updatehub-rpi ??= "--no-fstab-update"
+
+# UpdateHub Bootscript variables for raspberrypi3/64 and raspberrypi4/64 machine
+UPDATEHUB_BOOTSCRIPT_LOAD_A_updatehub-rpi ??= "\
+load mmc \${devnum}:2 \${kernel_addr_r} /boot/${KERNEL_IMAGETYPE}; fdt addr \${fdt_addr}; \
+fdt get value bootargs_dtb /chosen bootargs \
+"
+UPDATEHUB_BOOTSCRIPT_LOAD_B_updatehub-rpi ??= "\
+load mmc \${devnum}:3 \${kernel_addr_r} /boot/${KERNEL_IMAGETYPE}; fdt addr \${fdt_addr}; \
+fdt get value bootargs_dtb /chosen bootargs \
+"
+UPDATEHUB_BOOTSCRIPT_FIND_ROOT_A_updatehub-rpi ??= "part uuid mmc \${devnum}:2 uuid"
+UPDATEHUB_BOOTSCRIPT_FIND_ROOT_B_updatehub-rpi ??= "part uuid mmc \${devnum}:3 uuid"
+UPDATEHUB_BOOTSCRIPT_BOOTARGS_updatehub-rpi ??= "\${bootargs_dtb} root=PARTUUID=\${uuid} rw kgdboc=serial0"
+UPDATEHUB_BOOTSCRIPT_BOOTCMD_updatehub-rpi ??= "${KERNEL_BOOTCMD} \${kernel_addr_r} - \${fdt_addr}"
 
 ###
 # Configuration for Raspberry Pi Devices
@@ -60,6 +76,7 @@ IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi3 ??= " \
     bcm2710-rpi-3-b.dtb \
     bcm2710-rpi-3-b-plus.dtb \
     u-boot.bin;${SDIMG_KERNELIMAGE} \
+    boot.scr-${MACHINE};boot.scr \
 "
 
 ###
@@ -90,6 +107,7 @@ IMAGE_BOOT_FILES_updatehub-rpi_raspberrypi4 ??= " \
     bcm2835-bootfiles/start4x.elf;start4x.elf \
     bcm2711-rpi-4-b.dtb \
     u-boot.bin;${SDIMG_KERNELIMAGE} \
+    boot.scr-${MACHINE};boot.scr \
 "
 
 ###
