--- a/uhu/raspberrypi4.uhupkg.config
+++ b/uhu/raspberrypi4.uhupkg.config
@@ -2,6 +2,16 @@
     "objects": [
         [
             {
+                "filename": "boot.scr-$MACHINE",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/boot.scr",
+                "target-type": "device"
+            },
+            {
                 "filename": "u-boot.bin",
                 "filesystem": "vfat",
                 "format?": false,
@@ -133,6 +143,16 @@
             }
         ],
         [
+            {
+                "filename": "boot.scr-$MACHINE",
+                "filesystem": "vfat",
+                "format?": false,
+                "install-condition": "content-diverges",
+                "mode": "copy",
+                "target": "/dev/disk/by-label/boot",
+                "target-path": "/boot.scr",
+                "target-type": "device"
+            },
             {
                 "filename": "u-boot.bin",
                 "filesystem": "vfat",
